# DARKO_motion_interface

./: README.md  desc_sem.txt  franka_launch.sh  log  robot_desc_panda.txt
darko_description/: CMakeLists.txt  package.xml
darko_description/config/: robot_details.yaml
darko_description/meshes/: KEEP_ME  azure_kinect.dae  basler_ace_with_m12_lens.dae  lidar_tower_50cm.dae  lidar_tower_50cm_collision.dae  mini_pc_v3.dae  mounting_platform_02.dae  nao_sitting.dae  nao_standing.dae  ouster_os0.dae  panda_controller.dae  projector.dae  tyro_gemini.dae  xavier_agx_dk.dae
darko_description/robots/: darko_robot.urdf  darko_robot.urdf.xacro
darko_description/urdf/: lidar_tower.urdf.xacro  mini_gaming_pc.urdf.xacro  nao_robot.urdf.xacro  panda_arm.urdf.xacro  panda_controller.urdf.xacro  projector.urdf.xacro  sensor_basler_ace.urdf.xacro  sensor_kinect4a.urdf.xacro  sensor_ouster0.urdf.xacro  wireless_estop_receiver.urdf.xacro  xavier_agx_dk.urdf.xacro
rbkairos_common/moveit/rbkairos_panda_hand_moveit_config/launch/: move_group.launch
rbkairos_common/moveit/rbkairos_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rbkairos_common/rbkairos_control/launch/: rbkairos_franka_control.launch
rbkairos_sim/rbkairos_gazebo/launch/: rbkairos_franka_one_robot.launch
rviz_con/: CMakeLists.txt  README.md  package.xml
rviz_con/config/: rviz_con.rviz
rviz_con/launch/: rviz.launch
rviz_con/rviz_plugin_description_files/: combined_control_panel.xml
rviz_con/src/: combined_control_panel.cpp  combined_control_panel.h
(+24 files in other folders)
